--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "actions": [],
-    "git.ignoreLimitWarning": true
+    "git.ignoreLimitWarning": true,
+    "[xml].editor.defaultFormatter": "dotjoshjohnson.xml"
 }
