--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -1,100 +1,103 @@
 {
-  "_version": "1.32.0",
-  "sap.app": {
-    "id": "ccss.sap.projectccss",
-    "type": "application",
-    "i18n": "i18n/i18n.properties",
-    "applicationVersion": {
-      "version": "1.0.0"
+    "_version": "1.32.0",
+    "sap.app": {
+        "id": "ccss.sap.projectccss",
+        "type": "application",
+        "i18n": "i18n/i18n.properties",
+        "applicationVersion": {
+            "version": "1.0.0"
+        },
+        "title": "{{appTitle}}",
+        "description": "{{appDescription}}",
+        "resources": "resources.json",
+        "ach": "ach"
     },
-    "title": "{{appTitle}}",
-    "description": "{{appDescription}}",
-    "resources": "resources.json",
-    "ach": "ach"
-  },
-  "sap.ui": {
-    "technology": "UI5",
-    "icons": {
-      "icon": "sap-icon://task",
-      "favIcon": "",
-      "phone": "",
-      "phone@2": "",
-      "tablet": "",
-      "tablet@2": ""
+    "sap.ui": {
+        "technology": "UI5",
+        "icons": {
+            "icon": "sap-icon://task",
+            "favIcon": "",
+            "phone": "",
+            "phone@2": "",
+            "tablet": "",
+            "tablet@2": ""
+        },
+        "deviceTypes": {
+            "desktop": true,
+            "tablet": true,
+            "phone": true
+        }
     },
-    "deviceTypes": {
-      "desktop": true,
-      "tablet": true,
-      "phone": true
-    }
-  },
 
-  "sap.ui5": {
-    "flexEnabled": false,
-    "rootView": {
-      "viewName": "ccss.sap.projectccss.view.Main",
-      "type": "XML",
-      "async": true,
-      "id": "Main"
-    },
-    "dependencies": {
-			"minUI5Version": "1.94.1",
-      "libs": {
-        "sap.ui.core": {},
-        "sap.m": {},
-        "sap.ui.layout": {},
-        "sap.f": {}
-      }
-    },
-    "contentDensities": {
-      "compact": true,
-      "cozy": true
-    },
-    "models": {
-      "i18n": {
-        "type": "sap.ui.model.resource.ResourceModel",
-        "settings": {
-          "bundleName": "ccss.sap.projectccss.i18n.i18n"
+    "sap.ui5": {
+        "flexEnabled": false,
+        "rootView": {
+            "viewName": "ccss.sap.projectccss.view.Main",
+            "type": "XML",
+            "async": true,
+            "id": "Main"
+        },
+        "dependencies": {
+            "minUI5Version": "1.94.1",
+            "libs": {
+                "sap.ui.core": {},
+                "sap.m": {},
+                "sap.ui.layout": {},
+                "sap.f": {}
+            }
+        },
+        "contentDensities": {
+            "compact": true,
+            "cozy": true
+        },
+        "models": {
+            "i18n": {
+                "type": "sap.ui.model.resource.ResourceModel",
+                "settings": {
+                    "bundleName": "ccss.sap.projectccss.i18n.i18n"
+                }
+            },
+            "movies": {
+                "type": "sap.ui.model.json.JSONModel",
+                "uri": "model/Movies.json"
+            }
+        },
+        "resources": {
+            "css": [{
+                "uri": "css/style.css"
+            }]
+        },
+        "routing": {
+            "config": {
+                "routerClass": "sap.m.routing.Router",
+                "viewType": "XML",
+                "async": true,
+                "viewPath": "ccss.sap.projectccss.view",
+                "controlAggregation": "pages",
+                "controlId": "app",
+                "clearControlAggregation": false
+            },
+            "routes": [{
+                "name": "Home",
+                "pattern": "",
+                "target": "Home"
+            }, {
+                "name": "Detail",
+                "pattern": "movies/{movieId}/appointments/{appointmentId}",
+                "titleTarget": "",
+                "greedy": false,
+                "target": "Detail"
+            }],
+            "targets": {
+                "Home": {
+                    "viewId": "home",
+                    "viewName": "Home"
+                },
+                "Detail": {
+                    "viewId": "detail",
+                    "viewName": "Detail"
+                }
+            }
         }
-      },
-      "movies": {
-          "type": "sap.ui.model.json.JSONModel",
-          "uri": "model/Movies.json"
-      }
-    },
-    "resources": {
-      "css": [
-        {
-          "uri": "css/style.css"
-        }
-      ]
-    },
-    "routing": {
-      "config": {
-        "routerClass": "sap.m.routing.Router",
-        "viewType": "XML",
-        "async": true,
-        "viewPath": "ccss.sap.projectccss.view",
-        "controlAggregation": "pages",
-        "controlId": "app",
-        "clearControlAggregation": false
-      },
-      "routes": [
-        {
-          "name": "RouteMain",
-          "pattern": "RouteMain",
-          "target": ["TargetMain"]
-        }
-      ],
-      "targets": {
-        "TargetMain": {
-          "viewType": "XML",
-          "transition": "slide",
-          "clearControlAggregation": false,
-          "viewId": "Main",
-          "viewName": "Main"
-        }
-      }
     }
-  }
 }
